manifest/opensaas-backend.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: opensaas-backend
  namespace: my-super-saas
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
  selector:
    app: opensaas-backend
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: opensaas-backend
  namespace: my-super-saas
spec:
  host: opensaas-backend-florian-ns.apps.neutron-sno-office.intraneutron.fr
  to:
    kind: Service
    name: opensaas-backend
    weight: 100
  port:
    targetPort: 3001
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: opensaas-backend
spec:
  selector:
    matchLabels:
      app: opensaas-backend
  template:
    metadata:
      labels:
        app: opensaas-backend
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: opensaas-app
          image: quay.io/florian_even/opensaas-backend
          ports:
            - containerPort: 3001
              protocol: TCP
