manifest/opensaas-frontend.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: opensaas-frontend
  namespace: my-super-saas
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
  selector:
    app: opensaas-frontend
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: opensaas-frontend
  namespace: my-super-saas
spec:
  to:
    kind: Service
    name: opensaas-frontend
    weight: 100
  port:
    targetPort: 3000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: opensaas-frontend
  namespace: my-super-saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensaas-frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: opensaas-frontend
    spec:
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          name: opensaas-frontend-app
          ports:
            - containerPort: 3000
              protocol: TCP
          image: 'quay.io/florian_even/opensaas-frontend:latest'
